--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,66 @@ nav li:hover {
 nav a#openup {
   display: none;
 }
+
+#banner {
+  position: relative;
+  overflow-y: hidden;
+  margin: 0;
+  padding: 0;
+  background: url("../Assert/showcase.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+#banner .container {
+  margin-top: 25vh;
+}
+
+#banner h1 {
+  font-size: 64px;
+  text-align: center;
+}
+
+#banner h2 {
+  font-size: 32px;
+  text-align: center;
+}
+#banner p {
+  text-align: center;
+  font-size: 20.8px;
+  line-height: 33.28px;
+  width: 1300px;
+  margin-left: 300px;
+}
+
+img {
+  width: 100%;
+}
+
+.section {
+  padding: 32px 0;
+}
+
+.section-head {
+  font-size: 40px;
+  margin: 0;
+}
+
+.section h3 {
+  font-size: 2rem;
+}
+
+section#entertainment {
+  background: url(../img/section-bg.jpeg) no-repeat bottom/cover;
+  padding: 10rem 0;
+}
+
+.gift-cards {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: left;
+}
