--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ nav li:hover {
 nav a#openup {
   display: none;
 }
+.container {
+  text-align: center;
+  margin: 0;
+  padding: 0 48px;
+}
 
 #banner {
   position: relative;
@@ -81,24 +86,88 @@ nav a#openup {
 
 img {
   width: 100%;
+  display: inline;
 }
 
 .section {
+  display: block;
+  text-align: center;
   padding: 32px 0;
 }
 
-.section-head {
+.section h2 {
   font-size: 40px;
   margin: 0;
+  font-weight: 700px;
+  line-height: 64px;
 }
 
 .section h3 {
-  font-size: 2rem;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700px;
+  line-height: 51.2px;
 }
 
-section#entertainment {
-  background: url(../img/section-bg.jpeg) no-repeat bottom/cover;
-  padding: 10rem 0;
+.section p {
+  text-align: center;
+  font-size: 20.8px;
+  width: 1100px;
+  margin-left: 400px;
+}
+
+.btn1 {
+  padding: 16px;
+  color: #fff;
+  display: inline-block;
+  cursor: pointer;
+  background-color: #b90415;
+  border-radius: 3px;
+}
+
+.cell {
+  display: inline;
+  height: 636px;
+  width: 1055px;
+}
+
+.text-music {
+  height: 25.6px;
+  width: 1055px;
+  line-height: 25.6px;
+  text-align: center;
+  color: #f4f4f4;
+  font-size: 16px;
+}
+
+#video {
+  background-color: #f4f4f4;
+  color: #333333;
+}
+
+.video_img {
+  display: block;
+  height: auto;
+  width: 1032px;
+  margin-left: 400px;
+}
+
+.btn2 {
+  padding: 16px;
+  color: #fff;
+  display: inline-block;
+  cursor: pointer;
+  background-color: #103063;
+  border-radius: 3px;
+}
+
+#dark_img {
+  background: url(../Assert/section-bg.jpeg) no-repeat bottom/cover;
+  padding: 160px 0;
+}
+
+#dark_para {
+  font-size: 20px;
 }
 
 .gift-cards {
@@ -106,4 +175,85 @@ section#entertainment {
   grid-gap: 20px;
   grid-template-columns: repeat(2, 1fr);
   text-align: left;
+}
+
+#gift-cards {
+  background-color: #f4f4f4;
+  color: #333333;
+}
+
+#gift_img {
+  display: inline;
+  height: 343.797px;
+  width: 506px;
+  margin-left: 400px;
+}
+
+#gift-cards p:nth-of-type(1) {
+  display: block;
+  height: 102.375px;
+  width: 506px;
+  line-height: 25.6px;
+  font-size: 18px;
+  margin: 16px;
+  text-align: left;
+  color: #444;
+}
+
+#gift-cards p:nth-of-type(2) {
+  display: block;
+  height: 50px;
+  width: 506px;
+  line-height: 80px;
+  font-size: 18px;
+  margin: 16px;
+  text-align: left;
+  color: #444;
+}
+
+.text-reedem {
+  color: #103063;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: auto;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.footer-content ul {
+  text-decoration: none;
+  list-style: none;
+  flex: 1;
+  margin: 0 10px;
+  text-align: left;
+  padding: 0px;
+}
+
+.footer-content ul li {
+  margin: 3px 0;
+}
+
+.footer-content ul li a {
+  text-decoration: none;
+  color: #ccc;
+  font-size: 14px;
+}
+
+.footer-content ul li:first-child {
+  margin-bottom: 10px;
+  border-bottom: 1px solid #444;
+  padding-bottom: 10px;
+}
+
+.footer-cpy {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #333333;
+  color: #fff;
+  font-size: 16px;
+  line-height: 25.6px;
 }
